<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_account_change">Change Account</string>
    <string name="action_more_olyware">More from Olyware</string>
    <string name="action_settings">Settings</string>
    <string name="admob_unit_id">ca-app-pub-3444524510079111/2010159339</string>
    <string name="anonymous">anonymous</string>
    <string name="app_name">The Daily Startup</string>
    <string name="background_discription">Background header</string>
    <string name="error_receive_ad">Add was not received</string>
    <string name="exists">Already Exists</string>
    <string name="exists_hint">Enter your proof here. URLs work the best</string>
    <string name="exists_item">Nothing here yet. Be the first to show it exists!</string>
    <string name="exists_title">It Exists</string>
    <string name="failed">Failed! submission not sent</string>
    <string name="failed_get">Cannot retrieve idea. Do you have an internet connection?</string>
    <string name="founder">Adam Link\nKyle Olson\nOlyware</string>
    <string name="idea">An Idea is Loading&#8230;</string>
    <string name="idea_hint">Enter your startup idea here</string>
    <string name="improve">Improve It</string>
    <string name="improve_hint">Enter your thoughts here. Keep it constructive and positive</string>
    <string name="improve_item">Nothing here yet. Be the first to improve it!</string>
    <string name="improve_title">Improvements</string>
    <string name="ok">OK</string>
    <string name="new_idea">New</string>
    <string name="select">Select</string>
    <string name="select_user_name">Select Username</string>
    <string name="submit_idea">Post It</string>
    <string name="submit_exists">Prove It</string>
    <string name="submit_improve">Improve It</string>
    <string name="success">Success! submission complete</string>
    <string name="too_long">Idea must be under 70 characters</string>
    
    <string name="test_device_id">696DA1F2DB6000FEA3C03524BF0E6EE2</string>
</resources>
