<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@color/background"
        android:contentDescription="@string/background_discription"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/idea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:background="@color/background"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/idea"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/new_idea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/exists"
        android:layout_toLeftOf="@+id/exists"
        android:visibility="invisible"
        android:maxLines="1"
        android:text="@string/new_idea"
        android:textSize="17sp" />

    <Button
        android:id="@+id/exists"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/improve"
        android:layout_toLeftOf="@+id/improve"
        android:maxLines="1"
        android:text="@string/exists"
        android:textSize="17sp" />

    <Button
        android:id="@+id/improve"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/idea"
        android:maxLines="1"
        android:text="@string/improve"
        android:textSize="17sp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/improve"
        android:indeterminate="false"
        android:max="3"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar1"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/idea_hint"
            android:minLines="2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minLines="2"
            android:text="@string/submit_idea"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/exists_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:gravity="bottom|left"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:text="@string/exists_title"
        android:textSize="20sp" />
    <View
        android:id="@+id/underline"
        android:layout_below="@+id/exists_title"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/exists_title"
        android:background="@color/blue"
        android:layout_height="2dp"
        android:layout_width="wrap_content" />
    
    <TextView
        android:id="@+id/improve_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/exists_title"
        android:layout_alignParentLeft="true"
        android:gravity="bottom|right"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:text="@string/improve_title"
        android:textSize="20sp" />
    <View
        android:layout_below="@+id/improve_title"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/improve_title"
        android:background="@color/blue"
        android:layout_height="2dp"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_above="@+id/ad"
        android:layout_below="@+id/underline"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/half_margin"
        android:paddingBottom="@dimen/half_margin" >

        <ListView 
		    android:id="@+id/improve_list"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:paddingRight="@dimen/half_margin"
		    android:dividerHeight="0dp" />

        <ListView 
		    android:id="@+id/exists_list"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:paddingLeft="@dimen/half_margin"
		    android:dividerHeight="0dp" />
    </LinearLayout>
    
    <com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        googleads:adSize="BANNER"
        googleads:adUnitId="@string/admob_unit_id" />
    
    <!--<TextView
        android:id="@+id/founder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:gravity="bottom|right"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/founder"
        android:textSize="12sp" />-->

</RelativeLayout>